Second_Step/data/46/146/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:25: error: class, interface, or enum expected
    public static int fastNumberOfCancellations(int[] tab) {
                  ^
1 error
Not compiled
--|>
Grade :=>>0.00000
